// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupCell should not render hide prop is given 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  display: grid;
  opacity: 0;
  width: 0px;
  height: 0px;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </div>
</div>
`;

exports[`GroupCell should render GroupCellTitle properly 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  margin: 0;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  padding: 5px 0 5px 10px;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  border-right: 1px solid #C7D0D8;
  border-bottom: 1px solid #C7D0D8;
}

<div>
  <span
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </span>
</div>
`;

exports[`GroupCell should render properly 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  display: grid;
  opacity: 1;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </div>
</div>
`;
